--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Vikram Ramavarapu</title>
+		<title>Chidi Beats</title>
 		<!-- P5 Library -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 		<!-- Define inlined JavaScript -->
 		<script type="text/javascript" src="script.js"></script>
 		<link rel="stylesheet" href="style.css">
