--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </div>
             </div>
         </nav>
-		<div class="typewriter">
-			<h1 class="title" id="title">Vikram R.&nbsp;</h1>
+		<div class="popup">
+			<h1 class="title" id="title">CHIDI BEATS&nbsp;</h1>
 		</div>
 		<div class="footer">
 			<div class="dock">
