--- a/index.html
+++ b/index.html
@@ -12,39 +12,27 @@
 		<div id="canv"></div>
 		<nav class="nav">
             <div class="container">
-                <div class="logo">
-                    <h2 class="logo-text">&#x0C35;&#x0C3F;</h2>
+                <div id="logo" class="logo">
+                    <a class="icon" id="beat" href="https://soundcloud.com/idkbeats-1234/"><img src="assets/soundcloud.png" height="50" width="50"></a>
                 </div>
                 <div id="mainListDiv" class="main_list">
                     <ul class="navlinks">
                         <li><a href="pages/about.html" id = "about" class = "nav-link-typewriter"><h2>about</h2></a></li>
-                        <li><a href="pages/projects.html" id = "projects" class = "nav-link-typewriter"><h2>projects</h2></a></li>
-						<li><a href="assets/Vikram_Resume.pdf" download id = "experience" class = "nav-link-typewriter"><h2>experience</h2></a></li>
-						<li><a href="pages/projects.html" id = "journal" class = "nav-link-typewriter"><h2>vik's journal</h2></a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 		<div class="popup">
-			<h1 class="title" id="title">CHIDI BEATS&nbsp;</h1>
+			<h1 class="title" id="title">CHIDI BEATS</h1>
 		</div>
 		<div class="footer">
 			<div class="dock">
-				<a class="icon" id="git" href="https://github.com/vikramr2"><img src="assets/github.png" height="30" width="30"></a>
-				<a class="icon" id="linkedin" href="https://www.linkedin.com/in/vikram-ramavarapu-972433195/"><img src="assets/linkedin.png" height="30" width="30"></a>
-				<a class="icon" id="beat" href="https://soundcloud.com/idkbeats-1234/bolly-on-some-molly"><img src="assets/soundcloud.png" height="30" width="30"></a>
-
 				<script>
 					window.onload = initDivMouseOver;
 
 					function initDivMouseOver() {
-						var git = document.getElementById("git");
-						var linkedin = document.getElementById("linkedin");
 						var beat = document.getElementById("beat");
 						var about = document.getElementById("about");
-						var projects = document.getElementById("projects");
-						var experience = document.getElementById("experience");
-						var journal = document.getElementById("journal");
 
 						var message = document.getElementById("title");
 
@@ -57,20 +45,10 @@
 							message.innerHTML = newmsg
 						}
 
-						git.onmouseover        = function() { reset("Check out my projects!"); }
-						git.onmouseout         = function() { reset("Vikram R."); }
-						linkedin.onmouseover   = function() { reset("Connect with me!"); }
-						linkedin.onmouseout    = function() { reset("Vikram R."); }
-						beat.onmouseover       = function() { reset("Check out my beat with Roman!"); }
-						beat.onmouseout        = function() { reset("Vikram R."); }
+						beat.onmouseover       = function() { reset("Check out my music!"); }
+						beat.onmouseout        = function() { reset("CHIDI BEATS"); }
 						about.onmouseover      = function() { reset("Learn about me..."); }
-						about.onmouseout       = function() { reset("Vikram R."); }
-						projects.onmouseover   = function() { reset("My showcase!"); }
-						projects.onmouseout    = function() { reset("Vikram R."); }
-						experience.onmouseover = function() { reset("hire me plz..."); }
-						experience.onmouseout  = function() { reset("Vikram R."); }
-						journal.onmouseover    = function() { reset("Random thoughts n stuff"); }
-						journal.onmouseout     = function() { reset("Vikram R."); }
+						about.onmouseout       = function() { reset("CHIDI BEATS"); }
 					}
 				</script>
 			</div>
