--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		</div>
 		<div aria-label="Newest Photos">
 			<div class="carousel" data-carousel>
-				<button class="carousel-button prev" data-carousel-button="prev">&#8656;</button>
-				<button class="carousel-button next" data-carousel-button="next">&#8658;</button>
+				<button class="carousel-button prev" data-carousel-button="prev"><p>&#8656;</p></button>
+				<button class="carousel-button next" data-carousel-button="next"><p>&#8658;</p></button>
 				<ul data-slides>
 				<li class="slide" data-active>
 					<a href="https://soundcloud.com/idkbeats-1234/today-turned-out-pretty-alright">
