--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div id="mainListDiv" class="main_list">
                     <ul class="navlinks">
                         <li><a href="pages/about.html" id = "about" class = "nav-link-typewriter"><h2>about</h2></a></li>
+						<li><a href="pages/contact.html" id = "contact me" class = "nav-link-typewriter"><h2>Contact Me!</h2></a></li>
                     </ul>
                 </div>
             </div>
@@ -31,19 +32,16 @@
 				<button class="carousel-button next" data-carousel-button="next"><p>&#8658;</p></button>
 				<ul data-slides>
 				<li class="slide" data-active>
-					<a href="https://soundcloud.com/idkbeats-1234/today-turned-out-pretty-alright">
-						<img src="https://i1.sndcdn.com/artworks-5yRRooIUqlFIJGeJ-dRj6zQ-t500x500.jpg" alt="Nature Image #1" width="400px" height="400px">
-					</a>
+					<iframe width="400px" height="400x" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1183324024&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/idkbeats-1234" title="Idkbeats" target="_blank" style="color: #cccccc; text-decoration: none;">Idkbeats</a> · <a href="https://soundcloud.com/idkbeats-1234/bolly-on-some-molly" title="Bolly on some Molly" target="_blank" style="color: #cccccc; text-decoration: none;">Bolly on some Molly</a></div>
 				</li>
-				<li class="slide">
-					<a href="https://soundcloud.com/idkbeats-1234/forgot-my-umbrella-but-whatever">
-						<img src="https://i1.sndcdn.com/artworks-Cr5Q1n9QIKnqooAb-blGh5g-t500x500.jpg" alt="Nature Image #2" width="400px" height="400px">
-					</a>
+				<li class="slide" data-active>
+					<iframe width="400px" height="400px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1084778137&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/idkbeats-1234" title="Idkbeats" target="_blank" style="color: #cccccc; text-decoration: none;">Idkbeats</a> · <a href="https://soundcloud.com/idkbeats-1234/today-turned-out-pretty-alright" title="Today Turned Out Pretty Alright" target="_blank" style="color: #cccccc; text-decoration: none;">Today Turned Out Pretty Alright</a></div>
 				</li>
-				<li class="slide">
-					<a href="https://soundcloud.com/idkbeats-1234/big-taiko">
-						<img src="https://i1.sndcdn.com/artworks-x0ECfNN8ZwjW48Lr-9Eyr1A-t500x500.jpg" alt="Nature Image #3" width="400px" height="400px">
-					</a>
+				<li class="slide" data-active>
+					<iframe width="400px" height="400px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1067713648&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/idkbeats-1234" title="Idkbeats" target="_blank" style="color: #cccccc; text-decoration: none;">Idkbeats</a> · <a href="https://soundcloud.com/idkbeats-1234/forgot-my-umbrella-but-whatever" title="Forgot My Umbrella But Whatever" target="_blank" style="color: #cccccc; text-decoration: none;">Forgot My Umbrella But Whatever</a></div>
+				</li>
+				<li class="slide" data-active>
+					<iframe width="400px" height="400px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1016550793&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/idkbeats-1234" title="Idkbeats" target="_blank" style="color: #cccccc; text-decoration: none;">Idkbeats</a> · <a href="https://soundcloud.com/idkbeats-1234/big-taiko" title="Big Taiko" target="_blank" style="color: #cccccc; text-decoration: none;">Big Taiko</a></div>
 				</li>
 				</ul>
 			</div>
