--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<!-- Define inlined JavaScript -->
 		<script type="text/javascript" src="script.js"></script>
 		<link rel="stylesheet" href="style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	</head>
 	<body id="main">
 		<div id="canv"></div>
