--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	</head>
 	<body id="main">
-		<div id="canv"></div>
+		<!-- <div id="canv"></div> -->
 		<nav class="nav">
             <div class="container">
                 <div id="logo" class="logo">
