--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 		<!-- Define inlined JavaScript -->
 		<link rel="stylesheet" href="style.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	</head>
 	<body id="main">
 		<!-- <div id="canv"></div> -->
@@ -24,7 +23,7 @@
             </div>
         </nav>
 		<div class="popup">
-			<h1 class="title" id="title">CHIDI BEATS</h1>
+			<h1 class="title" id="title">CHIDI</h1>
 		</div>
 		<div aria-label="Newest Photos">
 			<div class="carousel" data-carousel>
