--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <div id="mainListDiv" class="main_list">
                     <ul class="navlinks">
                         <li><a href="pages/about.html" id = "about" class = "nav-link-typewriter"><h2>about</h2></a></li>
-						<li><a href="pages/contact.html" id = "contact me" class = "nav-link-typewriter"><h2>Contact Me!</h2></a></li>
+						<li><a href="#" id = "buy" class = "nav-link-typewriter"><h2>store</h2></a></li>
+						<li><a href="pages/contact.html" id = "contact me" class = "nav-link-typewriter"><h2>Contact</h2></a></li>
                     </ul>
                 </div>
             </div>
@@ -70,7 +71,8 @@
 			function initDivMouseOver() {
 				var beat = document.getElementById("beat");
 				var about = document.getElementById("about");
-
+				var buy = document.getElementById("buy");
+				var contact = document.getElementById("contact me");
 				var message = document.getElementById("title");
 
 				var reset = (newmsg) => {
@@ -86,6 +88,10 @@
 				beat.onmouseout        = function() { reset("CHIDI BEATS"); }
 				about.onmouseover      = function() { reset("Learn about me..."); }
 				about.onmouseout       = function() { reset("CHIDI BEATS"); }
+				buy.onmouseover        = function() { reset("Buy my beats!"); }
+				buy.onmouseout         = function() { reset("CHIDI BEATS"); }
+				contact.onmouseover    = function() { reset("Contact me!"); }
+				contact.onmouseout     = function() { reset("CHIDI BEATS"); }
 			}
 		</script>
 	</body>
