--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 				}
 
 				beat.onmouseover       = function() { reset("Check out my music!"); }
-				beat.onmouseout        = function() { reset("CHIDI BEATS"); }
+				beat.onmouseout        = function() { reset("CHIDI"); }
 				about.onmouseover      = function() { reset("Learn about me..."); }
-				about.onmouseout       = function() { reset("CHIDI BEATS"); }
+				about.onmouseout       = function() { reset("CHIDI"); }
 				buy.onmouseover        = function() { reset("Buy my beats!"); }
-				buy.onmouseout         = function() { reset("CHIDI BEATS"); }
+				buy.onmouseout         = function() { reset("CHIDI"); }
 				contact.onmouseover    = function() { reset("Contact me!"); }
-				contact.onmouseout     = function() { reset("CHIDI BEATS"); }
+				contact.onmouseout     = function() { reset("CHIDI"); }
 			}
 		</script>
 	</body>
