--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- <div id="canv"></div> -->
 		<div class="container">
 			<div id="logo" class="logo">
-				<a class="icon" id="beat" href="https://soundcloud.com/idkbeats-1234/"><img src="assets/soundcloud.png" height="50" width="50"></a>
+				<a class="icon" id="beat" href="https://soundcloud.com/idkbeats-1234/"><img src="assets/chidibeats_profile.png" height="50" width="50"></a>
 			</div>
 			<div id="mainListDiv" class="main_list">
 				<ul class="navlinks">
