--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		</div>
 		<div aria-label="Newest Photos">
 			<div class="carousel" data-carousel>
-				<button class="carousel-button prev" data-carousel-button="prev"><p>&#60;</p></button>
-				<button class="carousel-button next" data-carousel-button="next"><p>&#62;</p></button>
+				<button class="carousel-button prev" data-carousel-button="prev"><p>&lang;</p></button>
+				<button class="carousel-button next" data-carousel-button="next"><p>&rang;</p></button>
 				<ul data-slides>
 				<li class="slide" data-active>
 					<iframe width="400px" height="400x" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1183324024&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/idkbeats-1234" title="Idkbeats" target="_blank" style="color: #cccccc; text-decoration: none;">Idkbeats</a> · <a href="https://soundcloud.com/idkbeats-1234/bolly-on-some-molly" title="Bolly on some Molly" target="_blank" style="color: #cccccc; text-decoration: none;">Bolly on some Molly</a></div>
