button added, specify changes

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				</ul>
 			</div>
 		</div>
+		<a href="https://www.beatstars.com/chidibeats123"><div class="pixel"><p>BUY MY BEATS</p></div></a>
 		<script>
 			const buttons = document.querySelectorAll("[data-carousel-button]")
 
