--- a/pages/about.html
+++ b/pages/about.html
@@ -14,11 +14,11 @@
 	</head>
 	<body id="main2">
 		<div id="canv"></div>
-        <a href="../index.html"><h2 class="exit">&#10006;&nbsp;</h2></a>
+        <a href="../index.html"><h2 class="exit">(return)</h2></a>
         <div class="card-container">
             <div class="card mb-3">
                 <img
-                src="../assets/me.jpeg"
+                src="../assets/Roman2.jpg"
                 class="card-img-top"
                 alt="Sunset Over the Sea"
                 />
@@ -27,20 +27,19 @@
                     <b>Hey guys!</b>
                 </p>
                 <p class="card-text">
-                    My name is Vikram, and I am an undergraduate in the University of Illinois at Urbana-Champaign majoring in mathematics and computer science.
-                    I am really fascinated by user experiences, how they look, and how they can be interacted with by different people.
+                    My name is Roman, currently a Junior undergraduate at the University of Illinois at Urbana-Champaign.
                 </p>
                 <p class="card-text">
-                    <b>Did you know they did surgery on a grape? :0</b>
+                    My first introduction to music was when my parents enrolled me for piano practice. However, relatable to many other kids, after a couple years I quit.
                 </p>
                 <p class="card-text">
-                    Yes, in fact they did a while ago! Other technologies that I find interesting are Google Spoon and PurpleMail. Technology for health is a really fascinating topic. As such, my research interests are in Human-Computer Interaction (HCI) and Bioinformatics/Health Informatics.
+                    My excitement for music sparked back during my sophomore year of highschool. I picked up the piano again after watching Kyle Landry's rendition of Howl's Moving Castle on YouTube (If you haven't seen it you definitely should check it out!).
                 </p>
                 <p class="card-text">
-                    <b>Otherwise...</b>
+                    Ever since then music has always been something I truly identify with, and I hope that all of you that find this website enjoy the beats and melodies that I have produced!
                 </p>
                 <p class="card-text">
-                    I have a pintail longboard that I originally just rode because campus is pretty big and I needed convenience. Off late though, I've been having fun seeing it more as an ~A R T~, I learned a few tricks and maneuvers and I hope to keep learning. I also recently learned how to ride a horse this past summer and it has been quite the experience. I felt like a ~B A D A S S~, but then I would go home, a full reset would happen and I'd go to sleep.
+                    Thanks :)
                 </p>
                 </div>
             </div>
